rename IWN oriya synset class to OdiaSynsetData

--- a/platform-devops/ansible/roles/deployartifact/templates/language/hibernate.cfg.xml.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/hibernate.cfg.xml.j2
@@ -61,8 +61,8 @@
 		<mapping class="org.ekstep.language.model.MarathiSynsetDataLite"></mapping>
 		<mapping class="org.ekstep.language.model.NepaliSynsetData"></mapping>
 		<mapping class="org.ekstep.language.model.NepaliSynsetDataLite"></mapping>
-		<mapping class="org.ekstep.language.model.OriyaSynsetData"></mapping>
-		<mapping class="org.ekstep.language.model.OriyaSynsetDataLite"></mapping>
+		<mapping class="org.ekstep.language.model.OdiaSynsetData"></mapping>
+		<mapping class="org.ekstep.language.model.OdiaSynsetDataLite"></mapping>
 		<mapping class="org.ekstep.language.model.PunjabiSynsetData"></mapping>
 		<mapping class="org.ekstep.language.model.PunjabiSynsetDataLite"></mapping>
 		<mapping class="org.ekstep.language.model.SanskritSynsetData"></mapping>
