update audit_history table with summary column

--- a/platform-devops/ansible/roles/deployartifact/templates/language/database.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/database.properties.j2
@@ -8,7 +8,7 @@ db.validationQuery=select 1
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=false
 hibernate.query.substitutions=true 1, false 0
-hibernate.hbm2ddl.auto=none
+hibernate.hbm2ddl.auto=update
 hibernate.default_schema={{ mysql_db_schema }}
 hibernate.packagesToScan=com.ilimi
 hibernate.jdbc.batch_size=3
