--- a/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
+++ b/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
@@ -1,16 +1,16 @@
 #!/bin/sh
 if [ $1 == "learning" ];then
         cd /data/graphDB
-        zip -r /home/ec2-user/domain.zip domain
-        scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/domain.zip ec2-user@{{to_learning}}:/data/graphDB
+        zip -r domain.zip domain
+        scp -i /home/ec2-user/learning-platform.pem domain.zip ec2-user@{{to_learning}}:/data/graphDB
         rm -rf /home/ec2-user/domain.zip
 elif [ $1 == "total" ];then
         cd /data/graphDB
         for i in *
         do
                 echo $i
-                zip -r /home/ec2-user/$i.zip $i
-                scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/$i.zip ec2-user@{{to_total}}:/data/graphDB
+                zip -r $i.zip $i
+                scp -i /home/ec2-user/learning-platform.pem $i.zip ec2-user@{{to_total}}:/data/graphDB
                 rm -rf /home/ec2-user/$i.zip
         done
 else
@@ -18,8 +18,8 @@ else
         for j in *
         do
             if [ $j != domain ]; then
-                        zip -r /home/ec2-user/$j.zip $j
-                        scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/$j.zip ec2-user@{{to_language}}:/data/graphDB
+                        zip -r $j.zip $j
+                        scp -i /home/ec2-user/learning-platform.pem $j.zip ec2-user@{{to_language}}:/data/graphDB
                         rm -rf /home/ec2-user/$j.zip
             fi
         done
