--- a/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
+++ b/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
@@ -1,24 +1,49 @@
 #!/bin/sh
-mkdir /home/ec2-user/zipfolder
+today=$(date "+%Y-%m-%d")
+DIR=/data/graphDB
+ZIP=/home/ec2-user/zipfolder
+BACKUP=/home/ec2-user/backup
+
+if [ -d $ZIP ]; then
+    echo "directory exists"
+else
+    mkdir $ZIP
+fi
+
+if [ -d $BACKUP ]; then
+    echo "directory exists"
+else
+    mkdir $BACKUP
+fi
+
+if [ "$(ls -A $DIR)" ]; then
+     echo "Take action $DIR is not Empty"
+     cd /data
+     zip -r $BACKUP/graph-$today.zip graphDB
+     cd ~
+else
+    echo "$DIR is Empty"
+fi
+
 if [ $1 == "learning" ];then
         cd /data/graphDB
-        zip -r /home/ec2-user/zipfolder/domain.zip domain
-        scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/zipfolder/domain.zip ec2-user@{{to_learning}}:/data/graphDB
+        zip -r $ZIP/domain.zip domain
+        scp -i /home/ec2-user/learning-platform.pem $ZIP/domain.zip ec2-user@{{to_learning}}:/tmp
       elif [ $1 == "total" ];then
         cd /data/graphDB
         for i in *
         do
                 echo $i
-                zip -r /home/ec2-user/zipfolder/$i.zip $i
-                scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/zipfolder/$i.zip ec2-user@{{to_total}}:/data/graphDB
+                zip -r $ZIP/$i.zip $i
+                scp -i /home/ec2-user/learning-platform.pem $ZIP/$i.zip ec2-user@{{to_total}}:/tmp
         done
 else
         cd /data/graphDB
         for j in *
         do
                 if [ $j != "domain" ]; then
-                        zip -r /home/ec2-user/zipfolder/$j.zip $j
-                        scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/zipfolder/$j.zip ec2-user@{{to_language}}:/data/graphDB
+                        zip -r $ZIP/$j.zip $j
+                        scp -i /home/ec2-user/learning-platform.pem $ZIP/$j.zip ec2-user@{{to_language}}:/tmp
                 fi
         done
 fi
