--- a/platform-devops/ansible/roles/extract-graphdb/templates/extract_graphdb_script.j2
+++ b/platform-devops/ansible/roles/extract-graphdb/templates/extract_graphdb_script.j2
@@ -25,7 +25,7 @@ else
     echo "$DIR is Empty"
 fi
 
-cd /tmp
+cd /home/ec2-user/tmp
 for file in *.zip; do
     unzip -o "$file" -d /data/graphDB
 done
