Removed nohup command.

--- a/platform-devops/ansible/roles/export-mongodb/templates/export_mongodb.j2
+++ b/platform-devops/ansible/roles/export-mongodb/templates/export_mongodb.j2
@@ -1,3 +1,3 @@
-#!/bin/sh
+#!/bin/bash
 mongoexport --db orchestrator_db --collection scripts --out /home/ec2-user/commands.json
 scp -i /home/ec2-user/learning-platform.pem /home/ec2-user/commands.json ec2-user@{{mongo_machine}}:/home/ec2-user
