Commit For Hot Fix. Passport Key Incorporation

--- a/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
@@ -4,3 +4,4 @@ redis.port={{ redis_port }}
 redis.maxConnections=128
 akka.request_timeout=30
 environment.id={{ environment_id }}
+graph.passport.key.base={{graph_passport_key}}
