--- a/platform-devops/ansible/roles/deployartifact/templates/learning/graph.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/learning/graph.properties.j2
@@ -5,3 +5,4 @@ redis.maxConnections=128
 akka.request_timeout=30
 graph.ids=domain
 environment.id={{ environment_id }}
+graph.passport.key.base={{graph_passport_key}}
