--- a/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
@@ -5,3 +5,5 @@ redis.maxConnections=128
 akka.request_timeout=30
 environment.id={{ environment_id }}
 graph.passport.key.base={{graph_passport_key}}
+route.domain={{learning_neo4j_bolt_url}}
+route.all={{language_neo4j_bolt_url}}
