--- a/platform-devops/ansible/roles/deployartifact/templates/learning/graph.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/learning/graph.properties.j2
@@ -6,3 +6,5 @@ akka.request_timeout=30
 graph.ids=domain
 environment.id={{ environment_id }}
 graph.passport.key.base={{graph_passport_key}}
+route.domain={{learning_neo4j_bolt_url}}
+route.all={{language_neo4j_bolt_url}}
