--- a/platform-devops/ansible/roles/redis/templates/stop_script.j2
+++ b/platform-devops/ansible/roles/redis/templates/stop_script.j2
@@ -7,5 +7,5 @@
 #************************************************
 if [ `ps -ef | grep redis | grep -v grep | wc -l` -ge 1 ]
 then 
-	/home/ec2-user/redis-stable/src/redis-cli SHUTDOWN SAVE
+	/home/{{user}}/redis-stable/src/redis-cli SHUTDOWN SAVE
 fi
