--- a/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
+++ b/platform-devops/ansible/roles/copy-graphdb/templates/copy_graphdb_script.j2
@@ -1,9 +1,9 @@
 #!/bin/sh
 today=$(date "+%Y-%m-%d")
 DIR=/data/graphDB
-ZIP=/home/ec2-user/zipfolder
-BACKUP=/home/ec2-user/backup
-OPERATE=/home/ec2-user/operate
+ZIP=/home/{{user}}/zipfolder
+BACKUP=/home/{{user}}/backup
+OPERATE=/home/{{user}}/operate
 
 
 if [ -d $ZIP ]; then
@@ -41,14 +41,14 @@ rm -rf  $OPERATE/graph-$today.zip
 if [ $1 == "learning" ];then
         cd $OPERATE/graph-$today
         zip -r $ZIP/domain.zip domain
-        scp -i /home/ec2-user/learning-platform.pem $ZIP/domain.zip ec2-user@{{to_learning}}:/home/ec2-user/tmp
+        scp -i /home/{{user}}/learning-platform.pem $ZIP/domain.zip {{user}}@{{to_learning}}:/home/{{user}}/tmp
       elif [ $1 == "total" ];then
         cd $OPERATE/graph-$today
         for i in *
         do
                 echo $i
                 zip -r $ZIP/$i.zip $i
-                scp -i /home/ec2-user/learning-platform.pem $ZIP/$i.zip ec2-user@{{to_total}}:/home/ec2-user/tmp
+                scp -i /home/{{user}}/learning-platform.pem $ZIP/$i.zip {{user}}@{{to_total}}:/home/{{user}}/tmp
         done
 else
         cd $OPERATE/graph-$today
@@ -56,7 +56,7 @@ else
         do
                 if [ $j != "domain" ]; then
                         zip -r $ZIP/$j.zip $j
-                        scp -i /home/ec2-user/learning-platform.pem $ZIP/$j.zip ec2-user@{{to_language}}:/home/ec2-user/tmp
+                        scp -i /home/{{user}}/learning-platform.pem $ZIP/$j.zip {{user}}@{{to_language}}:/home/{{user}}/tmp
                 fi
         done
 fi
