--- a/platform-devops/ansible/roles/mongodb/templates/mongod.conf.j2
+++ b/platform-devops/ansible/roles/mongodb/templates/mongod.conf.j2
@@ -1,42 +1,41 @@
 # mongod.conf
 
+# Where to store the data.
+
+# Note: if you run mongodb as a non-root user (recommended) you may
+# need to create and set permissions for this directory manually,
+# e.g., if the parent directory isn't mutable by the mongodb user.
+dbpath=/var/lib/mongodb
+
 #where to log
 logpath=/var/log/mongodb/mongod.log
 
 logappend=true
 
-# fork and run in background
-fork=true
+#port = 27017
 
-#port=27017
-
-dbpath=/var/lib/mongo
-
-# location of pidfile
-pidfilepath=/var/run/mongodb/mongod.pid
-
-# Listen to local interface only. Comment out to listen on all interfaces.
-#bind_ip=127.0.0.1
+# Listen to local interface only. Comment out to listen on all interfaces. 
+#bind_ip = 127.0.0.1
 
 # Disables write-ahead journaling
-# nojournal=true
+# nojournal = true
 
 # Enables periodic logging of CPU utilization and I/O wait
-#cpu=true
+#cpu = true
 
 # Turn on/off security.  Off is currently the default
-#noauth=true
-#auth=true
+#noauth = true
+#auth = true
 
 # Verbose logging output.
-#verbose=true
+#verbose = true
 
 # Inspect all client data for validity on receipt (useful for
 # developing drivers)
-#objcheck=true
+#objcheck = true
 
 # Enable db quota management
-#quota=true
+#quota = true
 
 # Set oplogging level where n is
 #   0=off (default)
@@ -44,26 +43,26 @@ pidfilepath=/var/run/mongodb/mongod.pid
 #   2=R
 #   3=both
 #   7=W+some reads
-#diaglog=0
+#diaglog = 0
 
 # Ignore query hints
-#nohints=true
+#nohints = true
 
 # Enable the HTTP interface (Defaults to port 28017).
-#httpinterface=true
+#httpinterface = true
 
 # Turns off server-side scripting.  This will result in greatly limited
 # functionality
-#noscripting=true
+#noscripting = true
 
 # Turns off table scans.  Any query that would do a table scan fails.
-#notablescan=true
+#notablescan = true
 
 # Disable data file preallocation.
-#noprealloc=true
+#noprealloc = true
 
 # Specify .ns file size for new databases.
-# nssize=<size>
+# nssize = <size>
 
 # Replication Options
 
@@ -74,4 +73,3 @@ pidfilepath=/var/run/mongodb/mongod.pid
 # path to a key file storing authentication info for connections
 # between replica set members
 #keyFile=/path/to/keyfile
-
