--- a/platform-devops/ansible/roles/redis/templates/redis.conf.j2
+++ b/platform-devops/ansible/roles/redis/templates/redis.conf.j2
@@ -244,7 +244,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /home/ec2-user/redis-stable/
+dir /home/{{user}}/redis-stable/
 
 ################################# REPLICATION #################################
 
