Added AWS-Login role to ansible scripts contributes:Learning-Platform:#662

--- a/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/graph.properties.j2
@@ -7,3 +7,4 @@ environment.id={{ environment_id }}
 graph.passport.key.base={{graph_passport_key}}
 route.domain={{learning_neo4j_bolt_url}}
 route.all={{language_neo4j_bolt_url}}
+shard.id={{mw_shard_id}}
