update to neo4j graph export ansible role

--- a/platform-devops/ansible/roles/neo4j-migration-export/templates/copy_graph.j2
+++ b/platform-devops/ansible/roles/neo4j-migration-export/templates/copy_graph.j2
@@ -1,4 +1,4 @@
 #!/bin/bash
-#ssh -o "StrictHostKeyChecking no" {{user}}@{{neo4j_machine}}
+ssh -o "StrictHostKeyChecking no" {{user}}@{{neo4j_machine}}
 scp -r -i /home/ec2-user/learning-platform.pem /data/graphDB/{{graph_machine}} {{user}}@{{neo4j_machine}}:/home/{{user}}/
 
