--- a/platform-devops/ansible/roles/neo4j-migration-export/templates/copy_graph.j2
+++ b/platform-devops/ansible/roles/neo4j-migration-export/templates/copy_graph.j2
@@ -1,5 +1,6 @@
 #!/bin/bash
-ssh -o "StrictHostKeyChecking no" {{user}}@{{neo4j_machine}}
+ssh -o "StrictHostKeyChecking no" {{user}}@{{neo4j_machine1}}
+ssh -o "StrictHostKeyChecking no" {{user}}@{{neo4j_machine2}}
 scp -r -i /home/ec2-user/learning-platform.pem /data/graphDB/{{graph_machine}} {{user}}@{{neo4j_machine1}}:/home/{{user}}/
 scp -r -i /home/ec2-user/learning-platform.pem /data/graphDB/{{graph_machine}} {{user}}@{{neo4j_machine2}}:/home/{{user}}/
 
