--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -1,4 +1,6 @@
 #!/bin/sh
+cd {{neo4j_home}}
+`bin/neo4j-backup --from={{backup_add}} --to=/mnt/backup/neo4j-backup`
 time=$(date '+%d-%b-%Y')
 var="neo4jbackup"
 var2=$var$time
@@ -6,4 +8,4 @@ mkdir /mnt/backup/$var2
 cp -r /mnt/backup/neo4j-backup/* /mnt/backup/$var2/
 zip -r /mnt/backup/$var2.zip /mnt/backup/$var2
 aws s3 cp /mnt/backup/$var2.zip s3://test-neo-backup/
-#rm -rf /mnt/backup/$var2.zip /mnt/backup/$var2
+rm -rf /mnt/backup/$var2.zip /mnt/backup/$var2
