--- a/platform-devops/ansible/roles/neo4j-backup/templates/copy_s3.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/copy_s3.j2
@@ -2,4 +2,4 @@
 time=$(date '+%d-%b-%Y')
 var="neo4jbackup"
 var2=$var$time
-aws s3 cp /mnt/backup/$var2.zip s3://test-neo-backup/
+aws s3 cp /home/learning/$var2.zip s3://test-neo-backup/
