Issue #671 chore: changes to neo4j backup scripts

--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -1,9 +1,12 @@
 #!/bin/sh
 cd {{neo4j_home}}
 `bin/neo4j-backup --from={{backup_add}} --to=/home/learning/neo4j-backup`
-time=$(date '+%d-%b-%Y')
-var="neo4jbackup"
-var2=$var$time
+time=$(date '+%e%b%Y')
+var="{{service}}"
+var1="_"
+var3="{{instance}}"
+var2=$var$var1$var3$var1$time
 mkdir /home/learning/$var2
 cp -r /home/learning/neo4j-backup/* /home/learning/$var2/
-zip -r /home/learning/$var2.zip /home/learning/$var2
+tar -cvzf /home/learning/$var2.zip /home/learning/$var2
+rm -rf $var2
