--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -2,7 +2,7 @@
 cd {{neo4j_home}}
 `bin/neo4j-backup --from={{backup_add}} --to=/home/learning/neo4j-backup`
 time="$(date '+%e%b%Y')"
-var="{{graph_machine}"
+var="{{graph_machine}}"
 var1="_"
 var3="{{instance}}"
 time1="$(date '+%H%M%S')"
