--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -5,7 +5,7 @@ time="$(date '+%e%b%Y')"
 var="{{graph_machine}}"
 var1="_"
 var3="{{instance}}"
-time1="$(date '+%H%M%S')"
+time1="$(date '+%H')"
 var2="$var$var1$var3$var1$time$var1$time1"
 mkdir /home/learning/$var2
 cp -r /home/learning/neo4j-backup/* /home/learning/$var2/
