--- a/platform-devops/ansible/roles/neo4j-backup/templates/copy_s3.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/copy_s3.j2
@@ -4,6 +4,6 @@ var="{{graph_machine}}"
 var1="_"
 var3="{{instance}}"
 time1=$(date '+%H')
-var2=$var$var1$var3$var1$var1$time$var1$time1
+var2=$var$var1$var3$var1$time$var1$time1
 aws s3 cp /home/learning/$var2.tar.gz {{neo4j_backup_url}}
 rm -rf /home/learning/$var2.tar.gz
