--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -10,6 +10,6 @@ var2="$var$var1$var3$var1$time$var1$time1"
 mkdir /home/learning/$var2
 cp -r /home/learning/neo4j-backup/* /home/learning/$var2/
 tar -cvzf /home/learning/$var2.tar.gz /home/learning/$var2
-rm -rf $var2
+rm -rf /home/learning/$var2
 aws s3 cp /home/learning/$var2.tar.gz {{neo4j_backup_url}}
 rm -rf /home/learning/$var2.tar.gz
