--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -7,11 +7,8 @@ var1="_"
 var3="{{instance}}"
 time1="$(date '+%H%M%S')"
 var2="$var$var1$var3$var1$time$var1$time1"
-mkdir /home/learning/$var2
-cp -r /home/learning/neo4j-backup/* /home/learning/$var2/
 cd /home/learning
-tar -cvzf $var2.tar.gz $var2
+tar -cvzf $var2.tar.gz neo4j-backup
 cd -
-rm -rf /home/learning/$var2
 aws s3 cp /home/learning/$var2.tar.gz {{neo4j_backup_url}}
 rm -rf /home/learning/$var2.tar.gz
