--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -1,6 +1,6 @@
 #!/bin/sh
 cd {{neo4j_home}}
-`bin/neo4j-backup --from={{backup_add}} --to=/home/learning/neo4j-backup`
+`bin/neo4j-backup --from={{backup_add}} --to=/home/learning/{{graph_machine}}`
 time="$(date '+%e%b%Y')"
 var="{{graph_machine}}"
 var1="_"
@@ -8,7 +8,7 @@ var3="{{instance}}"
 time1="$(date '+%H%M%S')"
 var2="$var$var1$var3$var1$time$var1$time1"
 cd /home/learning
-tar -cvzf $var2.tar.gz neo4j-backup
+tar -cvzf $var2.tar.gz {{graph_machine}}
 cd -
 aws s3 cp /home/learning/$var2.tar.gz {{neo4j_backup_url}}
 rm -rf /home/learning/$var2.tar.gz
