--- a/platform-devops/ansible/roles/deployartifact/templates/learning/consumer-config.xml.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/learning/consumer-config.xml.j2
@@ -36,4 +36,14 @@
 		</ConsumerGroup>
 	</ConsumerGroups>
 </ConsumerConfig>
+<ConsumerConfig>
+	<ConsumerInit serverURI="{{ zookeeper_url }}" topic="telemetry-event-topic"></ConsumerInit>
+	<ConsumerGroups>
+		<ConsumerGroup id="lp-image-tagging-group" messageProcessor="org.ekstep.searchindex.processor.ImageMessageProcessor">
+			<Consumers>
+				<Consumer partitions="8" />
+			</Consumers>
+		</ConsumerGroup>
+	</ConsumerGroups>
+</ConsumerConfig>
 </ConsumerConfigs>
