Issue ekstep/Learning-Platform#732 chore: Topic name changed

--- a/platform-devops/ansible/roles/deployartifact/templates/learning/consumer-config.xml.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/learning/consumer-config.xml.j2
@@ -37,7 +37,7 @@
 	</ConsumerGroups>
 </ConsumerConfig>
 <ConsumerConfig>
-	<ConsumerInit serverURI="{{ zookeeper_url }}" topic="telemetry-event-topic"></ConsumerInit>
+	<ConsumerInit serverURI="{{ zookeeper_url }}" topic="{{ backend_event_topic_id }}"></ConsumerInit>
 	<ConsumerGroups>
 		<ConsumerGroup id="lp-image-tagging-group" messageProcessor="org.ekstep.searchindex.processor.ImageMessageProcessor">
 			<Consumers>
