--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -1,14 +1,15 @@
 #!/bin/sh
-cd {{neo4j_home}}
-`bin/neo4j-backup --from={{backup_add}} --to=/home/learning/{{graph_machine}}`
+cd /home/learning/neo4j-learning/neo4j-enterprise-3.0.4
+bin/neo4j-backup --from={{backup_add}} --to=/home/learning/{{graph_machine}}
 time="$(date '+%e%b%Y')"
 var="{{graph_machine}}"
 var1="_"
 var3="{{instance}}"
 time1="$(date '+%H%M%S')"
-var2="$var$var1$var3$var1$time$var1$time1"
+var4=".tar.gz"
+var2="$time$var1$time1$var4$var1$var$var4"
+echo "$var2"
 cd /home/learning
-tar -cvzf $var2.tar.gz {{graph_machine}}
-cd -
-aws  s3 cp /home/learning/$var2.tar.gz {{neo4j_backup_url}}
-rm -rf /home/learning/$var2.tar.gz
+tar -cvzf $var2 {{graph_machine}}
+aws s3 cp $var2 {{neo4j_backup_url}}
+rm -rf $var2
