Issue ekstep/Learning-Platform#732 chore: Changed the prod,qa groups vars for vision api and added redis con to language-index.properties

--- a/platform-devops/ansible/roles/deployartifact/templates/language/language-indexes.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/language-indexes.properties.j2
@@ -7,3 +7,6 @@ attributesTagIdentifier=af
 specialCharRegEx=^([$&+,:;=?@#|!]*)$
 numberRegEx=^([+-]?\\d*\\.?\\d*)$
 defaultTokenCountAfterWord=10
+redis.host={{ redis_host }}
+redis.port={{ redis_port }}
+redis.maxConnections=128
