Issue ekstep/Learning-Platform#732 chore: syntax error

--- a/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
+++ b/platform-devops/ansible/roles/neo4j-backup/templates/backup_script.j2
@@ -7,7 +7,7 @@ var1="_"
 var3="{{instance}}"
 time1="$(date '+%H%M%S')"
 var4=".tar.gz"
-var2="$time$var1$time1$var1$var$var4"
+var2="$time$var1$time1$var1$var$var1$var3$var4"
 echo "$var2"
 cd /home/learning
 tar -cvzf $var2 {{graph_machine}}
