--- a/platform-devops/ansible/roles/cassandra-db-update/templates/data.cql.j2
+++ b/platform-devops/ansible/roles/cassandra-db-update/templates/data.cql.j2
@@ -11,3 +11,10 @@ CREATE TABLE IF NOT EXISTS content_store.content_data (
 );
 
 ALTER TABLE content_store.content_data ADD oldBody blob;
+
+CREATE TABLE IF NOT EXISTS script_store.script_data (
+  name text,
+  type text,
+  reqmap text,
+  PRIMARY KEY (name)
+);
