Issue #1174 feat : Bulk import tools for vocab and frameworks

--- a/platform-tools/spikes/sunbird-tools/src/test/resources/content_fn.twig
+++ b/platform-tools/spikes/sunbird-tools/src/test/resources/content_fn.twig
@@ -7,7 +7,7 @@ name = {{ name }}
 type = {{ type }}
 another = {{ another | default('hello') }}
 language = {{ langs[lang] }}
-language = {{ lookup(lang, 'lang_codes') }}
+{# - language = {{ lookup(lang, 'lang_codes') }} -#}
 languages = [en, hi]
 grades = [{{ grades }}]
 child = {{child }}
